--- a/nRF5_SDK_12.3.0/components/toolchain/gcc/Makefile.posix
+++ b/nRF5_SDK_12.3.0/components/toolchain/gcc/Makefile.posix
@@ -1,3 +1,3 @@
-GNU_INSTALL_ROOT := /usr/local/gcc-arm-none-eabi-4_9-2015q3
-GNU_VERSION := 4.9.3
+GNU_INSTALL_ROOT := /home/kevinh/opt/xPacks/@gnu-mcu-eclipse/arm-none-eabi-gcc/7.3.1-1.1.1/.content
+GNU_VERSION := 7.3.1
 GNU_PREFIX := arm-none-eabi
